#1079: Fix sidebar items are not visible if the whole sidebar is taller than the viewport.

--- a/source/widgets/sidebar/sidebar.scss
+++ b/source/widgets/sidebar/sidebar.scss
@@ -94,11 +94,13 @@ $sidebarObjectPush: $basicPush * 5;
 			}
 		}
 
+		/* now calculated on browser runtime
 		&.unfolded {
 			.object__content {
-				max-height: 1000px; /* when you unfold an accordion child */
+				max-height: 1000px; * when you unfold an accordion child *
 			}
 		}
+		*/
 	}
 
 	&:after {
